# ctp7_modules

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindLibmemsvc.cmake  ToolchainPeta.cmake
example-client/: CMakeLists.txt  rpc-client.cpp
example-client/cmake/: Findwiscrpcsvc.cmake  PreventInSourceBuilds.cmake
include/: RPC.hpp  calibration_routines.h  hw_constants.h  libmemsvc.h  memory.h  vfat3.h
include/amc/: sca_enums.h
src/: amc.cpp  calibration_routines.cpp  memory.cpp  vfat3.cpp
src/amc/: sca.cpp
